<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FF1744"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ism.ritik.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/title_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Nanodegree Apps!"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_1"
        android:textAllCaps="true"
        android:layout_below="@id/title_app"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_2"
        android:textAllCaps="true"
        android:layout_below="@id/btn1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_3"
        android:textAllCaps="true"
        android:layout_below="@id/btn2"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />

    <Button
        android:id="@+id/btn4"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_4"
        android:textAllCaps="true"
        android:layout_below="@id/btn3"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />

    <Button
        android:id="@+id/btn5"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_5"
        android:textAllCaps="true"
        android:layout_below="@id/btn4"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />

    <Button
        android:id="@+id/btn6"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:text="@string/app_6"
        android:textAllCaps="true"
        android:layout_below="@id/btn5"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="#D500F9"
        android:textColor="#000000"
        android:onClick="OnClick"
        />
</RelativeLayout>
